# Media

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  start.sh
app/: build.gradle
orange/: CMakeLists.txt  build.gradle
orange/src/androidTest/java/com/juhezi/orange/: ExampleInstrumentedTest.java
orange/src/main/: AndroidManifest.xml
orange/src/main/cpp/common/: Condition.h  Errors.h  Mutex.h  Thread.h  common_tools.h
orange/src/main/cpp/examples/: avio_reading.c  decode_audio.c  decode_video.c  demuxing_decoding.c  encode_audio.c  encode_video.c  metadata.c  resampling_audio.c
orange/src/main/cpp/gpuimage/: GLProgram.cpp  GLProgram.hpp  GPUFrameBuffer.cpp  GPUFrameBuffer.hpp  GPUImageFrameBuffer.cpp  GPUImageFrameBuffer.hpp  GPUImageFrameBufferCache.cpp  GPUImageFrameBufferCache.hpp  GPUImageFramebuffer.cpp  GPUImageFramebuffer.hpp  GPUImageFramebufferCache.cpp  GPUImageFramebufferCache.hpp  GPUImageInput.hpp  GPUImageMacros.h  GPUImageMath.h  GPUImageOutput.cpp  GPUImageOutput.hpp  GPUImageShowView.cpp  GPUImageShowView.hpp  GPUImageUtil.cpp  GPUImageUtil.hpp  GPUObject.cpp  GPUObject.hpp
orange/src/main/cpp/gpuimage/filter/: GPUImageFilter.cpp  GPUImageFilter.hpp  GPUImageFilterGroup.cpp  GPUImageFilterGroup.hpp
orange/src/main/cpp/media/: Mutex.h  demuxer.c  ffmpeg_mediametadataretriever.c  ffmpeg_mediametadataretriever.h  ffmpeg_utils.c  ffmpeg_utils.h  h264_tools.c  media_tools.c  media_tools.h  mediametadataretriever.cpp  mediametadataretriever.h  mediametadataretriever.hpp  pcm_tools.c  pcm_tools.h  rgb_tools.c  rgb_tools.h  yuv_tools.c  yuv_tools.h
orange/src/main/java/com/juhezi/orange/: GPUImageShowView.kt
orange/src/main/java/com/juhezi/orange/bridge/: GPUImageShowView.kt  OrangeBridge.java
orange/src/main/java/com/juhezi/orange/media/: FFmpegMediaMetadataRetriever.java
orange/src/main/java/com/juhezi/orange/media/capture/: CameraController.kt  CaptureController.kt  ICameraController.kt
orange/src/main/java/com/juhezi/orange/media/demuxer/: EternalDemuxer.kt  HardDemuxer.kt  SoftDemuxer.kt
orange/src/main/java/com/juhezi/orange/media/effectfilter/: EffectFrame.kt  EternalRenderCallback.kt
orange/src/main/java/com/juhezi/orange/media/experimental/: PcmPlayer.kt  PcmRecorder.kt  WavCodec.kt  WavUtils.java  pcm_record_and_play.kt
orange/src/main/java/com/juhezi/orange/media/gpuimage/: EternalGLThread.kt  EternalGPUImage.kt  FragmentShaderBuilder.kt  GPUConstants.kt
orange/src/main/java/com/juhezi/orange/utils/: NativeUtils.java
orange/src/main/jni/: MediaMetadataRetrieverJNI.cpp  orange.cpp
orange/src/test/java/com/juhezi/orange/: ExampleUnitTest.java
(+209 files in other folders)
